src/objects/CL_Detail__c.object
<CustomObject>
    <description>Stores the entries for a particular day&apos;s activity at a Center location.  Rolls up under a Center Location</description>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <defaultValue>TODAY() -1</defaultValue>
        <description>Date that these details apply to (typically the day before the current date)</description>
        <inlineHelpText>Defaults to yesterday&apos;s date</inlineHelpText>
        <label>As/Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Location__c</fullName>
        <description>The Center that these details pertain to</description>
        <label>Center Location</label>
        <referenceTo>Center_Location__c</referenceTo>
        <relationshipName>CL_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <formula>Text(Center_Location__r.Center_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_name__c</fullName>
        <description>The Center name is the same as the Center Detail: Center Location, but formula fields (even cross-object formulas) are not displayed during editing.  When cloned, this picklist maintains its value.</description>
        <inlineHelpText>Does this field match the Center field?  It should.</inlineHelpText>
        <label>Center name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Chicago Deerfield/Northbrook</fullName>
                </value>
                <value>
                    <fullName>Chicago Naperville</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Cleveland Akron</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Denver Colorado Springs</fullName>
                </value>
                <value>
                    <fullName>Denver Glenwood Springs</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Miami Aventura</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Phoenix Mesa</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Salt Lake City</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Francisco - Daly City</fullName>
                </value>
                <value>
                    <fullName>San Francisco - Oakland</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>St. Louis</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Washington Tysons Corner</fullName>
                </value>
                <value>
                    <fullName>Washington Chevy Chase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consults_Available_Next_Week__c</fullName>
        <description>The number of Consults available at this Center next week.</description>
        <label>Consults Available Next Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults_Cancelled__c</fullName>
        <description>The number of Consults that cancelled for this date.</description>
        <inlineHelpText>How many Consults cancelled that had been scheduled on this date?</inlineHelpText>
        <label>Consults Cancelled</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults_Scheduled_Next_Week__c</fullName>
        <description>The number of Consults scheduled at this Center next week.</description>
        <label>Consults Scheduled Next Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults_Scheduled__c</fullName>
        <description>The number of Consults Scheduled for a particular day at this location</description>
        <inlineHelpText>How many Consults were scheduled on this day?</inlineHelpText>
        <label>Consults Scheduled</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults_Showed__c</fullName>
        <description>The number of Consults that actually occurred for this Center on this date.</description>
        <inlineHelpText>How many Consults actually showed?</inlineHelpText>
        <label>Consults Showed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Available_Consult__c</fullName>
        <description>The date of the next available Consult at this Center.</description>
        <label>Next Available Consult</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Collected__c</fullName>
        <description>Revenue Collected for this Center a/o this date</description>
        <label>Revenue Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CL Detail</label>
    <nameField>
        <displayFormat>CLD-{0}</displayFormat>
        <label>CLD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CL Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>